# CMakeList.txt : CMake project for Bank_Application_Simple, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Bank_Application_Simple "Bank_Application_Simple.cpp" "Bank_Application_Simple.h")

# TODO: Add tests and install targets if needed.
